WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91866
QtNetworkAccessManager should not rely on signal sslErrors when QT_NO_SSL is defined
https://bugs.webkit.org/show_bug.cgi?id=91866
Summary
QtNetworkAccessManager should not rely on signal sslErrors when QT_NO_SSL is ...
Rafael Brandao
Reported
2012-07-20 08:21:17 PDT
QtNetworkAccessManager should not rely on signal sslErrors when QT_NO_SSL is defined
Attachments
Patch
(3.88 KB, patch)
2012-07-20 08:24 PDT
,
Rafael Brandao
no flags
Details
Formatted Diff
Diff
Patch
(2.83 KB, patch)
2012-07-20 11:01 PDT
,
Rafael Brandao
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Rafael Brandao
Comment 1
2012-07-20 08:24:46 PDT
Created
attachment 153508
[details]
Patch
Early Warning System Bot
Comment 2
2012-07-20 08:33:06 PDT
Comment on
attachment 153508
[details]
Patch
Attachment 153508
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/13303362
Noam Rosenthal
Comment 3
2012-07-20 10:36:21 PDT
Comment on
attachment 153508
[details]
Patch Some overload problems :)
Rafael Brandao
Comment 4
2012-07-20 11:01:38 PDT
Created
attachment 153543
[details]
Patch
Rafael Brandao
Comment 5
2012-07-20 12:43:54 PDT
Comment on
attachment 153543
[details]
Patch Clearing flags on attachment: 153543 Committed
r123249
: <
http://trac.webkit.org/changeset/123249
>
Rafael Brandao
Comment 6
2012-07-20 12:43:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug