QtNetworkAccessManager should not rely on signal sslErrors when QT_NO_SSL is defined https://bugs.webkit.org/show_bug.cgi?id=91866

Reviewed by Noam Rosenthal.

* WebProcess/qt/QtNetworkAccessManager.cpp:
(WebKit::QtNetworkAccessManager::QtNetworkAccessManager): QNAM's signal is only defined when
that flag is undefined. Removed the connection when we have the flag set.
(WebKit::QtNetworkAccessManager::onSslErrors): When the flag is set, this slot becomes unused.

Canonical link: https://commits.webkit.org/109704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123249 268f45cc-cd09-0410-ab3c-d52691b4dbfc